--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# macos
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -5,6 +8,9 @@ __pycache__/
 
 # C extensions
 *.so
+
+# Excel files
+*.xlsx
 
 # Distribution / packaging
 .Python
